Changelog for Shake

    #157, allow variable substitution in include/subninja statements
    #147, add the version in the profile reports
    #147, add --numeric-version flag
    #28, switch to continuation passing style, uses far less threads
    #156, add readConfigFileWithEnv for configs with an initial env
    #129, fix processor count detection on Mac with -threaded
    #155, add --live and shakeLiveFiles
    #153, handle escaped spaces in parseMakefile
    #152, fix typo in the manual
    Add copyFileChanged
    Fix the leaf column in profile reports
    Add Maybe instances for cmd arguments
    Add a --profile flag (alias for --report)
    Switch to an underlying continuation monad
0.13.2
    #95, ensure progress never gets corrupted
    #124, add a profile report demo
    #128, allow long Ninja command lines
    Fix --report=- for builds with no commands in them
0.13.1
    Remove all package upper bounds
    #126, Ninja compatibility if Ninja fails to create a file
    #123, generate Chrome compatible traces
0.13
    #122, make --report=- write a report to stdout
    Improve the profile report summary
    #122, turn shakeReport into a list of files, instead of a Maybe
    #60, improve how command lines are printed out
    #113, print info about copyFile' and removeFilesAfter at -V
    Replace **> with |*> , ?>> with &?> and *>> with &*>
    IMPORTANT: Incompatible on disk format change
    #83, support digest rules for files
    #83, add shakeChange parameter and --digest* args
    #83, add equalValue function to Rule typeclass
    Deprecate defaultRule
    Make literal *> matches take precedence over wildcard matches
    #120, add a priority function
0.12
    #62, move to a ReaderT/IORef for the Action monad
    Add DEPRECATED pragmas on system' calls
    Delete Development.Shake.Sys, use command or cmd instead
    Add a 'console' pool to Ninja
    Avoid using System.Cmd (deprecated in GHC HEAD)
    #41, use higher precision file times on POSIX